[package]
name = "hermes-runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmtime = { version = "8", features = ["component-model"] }
wasmtime-wasi = "8"  # WASI extension
wit-bindgen = "0.6"  
